# api

./: .env.example  README.md  main.py  pyproject.toml
docs/: README.md
src/data/: 0001-init.sql
src/models/: api.py  database.py
src/routers/: __init__.py
src/routers/v1/: __init__.py  moots.py
src/routers/v1/internal/: __init__.py  sessions.py  users.py
src/utils/: auth.py  bitfield.py  database.py  flags.py  ids.py  oauth.py  types.py
